package com.mcnz.shapes;

public class Point extends Shape 
{
    int x;
    int y; 
}
