classDiagram

    class Surface {
        <<interface>>
        +calcArea() int
    }

    class Rectangle {
        -height int
        -width int
        +Rectangle(height int, width int)
        +calcArea() int
        +getHeight() int
        +setHeight(height int) void
        +getWidth() int
        +setWidth(width int) void
    }

    class Square {
        -side int
        +Square(side int)
        +calcArea() int
        +getSide() int
        +setSide(side int) void
    }

    class Triangle {
        -height int
        -width int
        +Triangle(height int, width int)
        +calcArea() int
        +getHeight() int
        +setHeight(height int) void
        +getWidth() int
        +setWidth(width int) void
    }

    class Point {
        -x int
        -y int
        +Point(x int, y int)
        +calcArea() int
        +getX() int
        +setX(x int) void
        +getY() int
        +setY(y int) void
    }

    class Line {
        -p1 Point
        -p2 Point
        +Line(p1 Point, p2 Point)
        +calcArea() int
    }

    class Circle {
        -radius int
        +Circle(radius int)
        +calcArea() int
        +getRadius() int
        +setRadius(radius int) void
    }

    class ShapeTester {
        +compareShapes(objectA Surface, objectB Surface) boolean$
        +main(args String[]) void$
    }

    Surface <|.. Rectangle : implements
    Surface <|.. Square : implements
    Surface <|.. Triangle : implements
    Surface <|.. Point : implements
    Surface <|.. Line : implements
    Surface <|.. Circle : implements

    Line --> Point : contains

    ShapeTester ..> Surface : uses
    ShapeTester ..> Rectangle : creates
    ShapeTester ..> Square : creates
    ShapeTester ..> Point : creates
    ShapeTester ..> Line : creates
    ShapeTester ..> Triangle : creates
    ShapeTester ..> Circle : creates
